# stock-analytics

./: .env.example  .gitignore  Makefile  alembic.ini  readme.md  requirements.txt
api/: Cargo.toml  build.rs  rustfmt.toml
api/conf/: app.toml
api/src/: applications.rs  config.rs  domains.rs  https.rs  infrastructures.rs  lib.rs  main.rs  modules.rs  routes.rs  test_support.rs  util.rs
api/src/applications/: brand.rs  common.rs  errors.rs  validation.rs
api/src/applications/brand/: interactors.rs  repositories.rs  usecases.rs
api/src/applications/common/: id_generator.rs  resource_key.rs  ulid_generator.rs
api/src/applications/errors/: application_error.rs  repository_error.rs
api/src/applications/validation/: simple_validator.rs  validation_error.rs  validation_failure.rs  validation_message_keys.rs  validator.rs  validator_chain.rs
api/src/config/: app_config.rs  database_config.rs  log_config.rs  server_config.rs
api/src/domains/: brand.rs  macros.rs
api/src/domains/brand/: brand.rs  category.rs  sector.rs  sector_group.rs
api/src/domains/errors/: domain_error.rs
api/src/domains/macros/: define_id.rs  entity_id.rs
api/src/https/: brand.rs  middleware.rs
api/src/https/brand/: brand_json.rs  (+3 more)
api/src/infrastructures/: brand.rs  errors.rs  support.rs
api/src/modules/: brand.rs  errors.rs  root.rs
api/src/queries/: brand.rs
api/src/routes/: brand.rs  router.rs
api/src/test_support/: assert_result.rs  datetime.rs  generic.rs  mock.rs  string.rs  ulid.rs  unambiguous_ulid.rs
api/src/util/: str.rs  ulid.rs  unempty_string.rs  version.rs
(+192 files in other folders)
