[package]
name = "stock-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.84"
axum = "0.7.9"
futures = "0.3.31"
once_cell = "1.20.2"
regex = "1.11.1"
thiserror = "2.0.9"
tokio = "1.42.0"
ulid = "1.1.3"

[dev-dependencies]
proptest = "1.0.0"
mockall = "0.13.1"
base32 = "0.5.1"
