[package]
name = "stock-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.84"
axum = "0.7.9"
config = "0.15.11"
futures = "0.3.31"
log = "0.4.25"
once_cell = "1.20.2"
regex = "1.11.1"
sea-orm = { version = "1.1.4", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ulid = "1.1.3"

[dev-dependencies]
proptest = "1.0.0"
mockall = "0.13.1"
base32 = "0.5.1"
rand = "0.8.5"

[lints.clippy]
# NOTE: module export is auto generated
module_inception = "allow"
